--- a/mern-docker/frontend/Dockerfile
+++ b/mern-docker/frontend/Dockerfile
@@ -1,17 +1,8 @@
-FROM node:20-alpine3.18
-
-# RUN addgroup app && adduser -S -G app app
-
-# USER app
+FROM node:20-alpine
 
 WORKDIR /app
-
-COPY package*.json ./
-
+copy package.*json ./
 RUN npm install
-
-COPY . .
-
-EXPOSE 5173
-
+copy . .
+expose 5173
 CMD npm run dev
