--- a/mern-docker/frontend/Dockerfile
+++ b/mern-docker/frontend/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:20-alpine
 
 WORKDIR /app
-copy package.*json ./
+COPY package.*json ./
 RUN npm install
-copy . .
-expose 5173
+COPY . .
+EXPOSE 5173
 CMD npm run dev
